--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -426,16 +426,17 @@
 
    <!-- Default files to pin via Pinner Service -->
    <string-array translatable="false" name="config_defaultPinnerServiceFiles">
-       <item>"/system/framework/arm64/boot-framework.oat"</item>
-       <item>"/system/framework/boot-framework.vdex"</item>
-       <item>"/system/framework/oat/arm64/services.odex"</item>
-       <item>"/system/framework/oat/arm64/services.vdex"</item>
-       <item>"/system/framework/arm64/boot.oat"</item>
-       <item>"/system/framework/boot.vdex"</item>
-       <item>"/system/framework/arm64/boot-core-libart.oat"</item>
-       <item>"/system/framework/boot-core-libart.vdex"</item>
-       <item>"/system/framework/boot-QPerformance.vdex"</item>
-       <item>"/system/framework/boot-UxPerformance.vdex"</item>
+        <item>/system/framework/arm64/boot-framework.oat</item>
+        <item>/system/framework/framework.jar</item>
+        <item>/system/framework/oat/arm64/services.odex</item>
+        <item>/system/framework/services.jar</item>
+        <item>/apex/com.android.art/javalib/arm64/boot.oat</item>
+        <item>/apex/com.android.art/javalib/arm64/boot-core-libart.oat</item>
+        <item>/apex/com.android.art/javalib/core-oj.jar</item>
+        <item>/apex/com.android.art/javalib/core-libart.jar</item>
+        <item>/apex/com.android.media/javalib/updatable-media.jar</item>
+        <item>/system/lib64/libsurfaceflinger.so</item>
+        <item>/system_ext/priv-app/SystemUI/SystemUI.apk</item>
    </string-array>
 
     <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
